objects/tffa__Identification__c.object
<CustomObject>
    <description>Identification details of the party such as  driver license numbers, passport numbers .  Supports capture of identity document id as well which is stored as an attachment in the system.</description>
    <fields>
        <fullName>tffa__BackPhotoId__c</fullName>
        <description>Identifier of the back photo document persisted in the system against the identity document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BackPhotoId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BackPhotoType__c</fullName>
        <description>Content Type  of the back photo document persisted in the system against the identity document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BackPhotoType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExpirationDate__c</fullName>
        <description>The expiration date of the document used for identity verification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ExpirationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FrontPhotoId__c</fullName>
        <description>Identifier of the front photo attachment document persisted in the system against the identity document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FrontPhotoId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FrontPhotoType__c</fullName>
        <description>Content Type of the front photo  document persisted in the system against the identity document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FrontPhotoType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IdentificationNumber__c</fullName>
        <description>On a particular document or in a particular resource each party  is assigned a unique value. For example a driver&apos;s license number or passport number on documents.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>On a particular document or in a particular resource each party  is assigned a unique value. For example a driver&apos;s license number or passport number on documents.</inlineHelpText>
        <label>Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IssueDate__c</fullName>
        <description>The date when the identity document was issued to the party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IssueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__IssuingAuthority__c</fullName>
        <description>The issuing authority of the identification document, example the passport authority of the country</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IssuingAuthority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IssuingCountry__c</fullName>
        <description>Country which issued the identification document</description>
        <label>IssuingCountry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__IdentificationIssuingCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IssuingState__c</fullName>
        <description>The issuing state of the document</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IssuingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to the parent party object</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Identifications</relationshipLabel>
        <relationshipName>Identifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__PrefillSource__c</fullName>
        <description>The source of prefill data for the applicant information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefill source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Prefilled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true, if the data was prefilled using either scanning of photo ID or existing customer login.</description>
        <label>Prefilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>Optional field to store the source of the identification document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>The kind of document that was examined to verify identity of the applicant. A driver&apos;s license is an example of an identity document.. The name will be defaulted to the name field</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__IdentificationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__VerifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who verifies this identification document</description>
        <label>VerifiedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Identifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__VerifiedOn__c</fullName>
        <description>The date and time of verification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>VerifiedOn</label>
        <type>DateTime</type>
    </fields>
    <label>Identification</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Identification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Identifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>